// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshots > renders correctly with children 1`] = `
<ul
  aria-label="Menu"
  className="menu medium dummy-class-name"
  data-testid="menu"
  data-vibe="Menu"
  id="menu-2"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
>
  <div
    className="typography_b59898fd6b secondary_8c8b98f792 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e title"
    data-testid="menu-title_menu-2-item-0"
  >
    <label
      className="titleCaption titleCaptionBottom"
      data-testid="menu-title-caption_menu-2-item-0"
      id="menu-2-item-0"
    >
      my title
    </label>
  </div>
  <li
    aria-selected={true}
    className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e item focused initialSelected"
    data-testid="menu-item_1"
    id="menu-2-item-1"
    onClick={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <div
      className="title"
    >
      item 1
    </div>
    <div
      className="container directionRow justifyStart alignCenter"
      style={
        {
          "gap": "var(--spacing-xs)",
        }
      }
    />
  </li>
  <li
    aria-selected={false}
    className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e item initialSelected"
    data-testid="menu-item_2"
    id="menu-2-item-2"
    onClick={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <div
      className="title"
    >
      item 2
    </div>
    <div
      className="container directionRow justifyStart alignCenter"
      style={
        {
          "gap": "var(--spacing-xs)",
        }
      }
    />
  </li>
</ul>
`;

exports[`Snapshots > renders correctly with custom class name 1`] = `
<ul
  aria-label="Menu"
  className="menu medium dummy-class-name"
  data-testid="menu"
  data-vibe="Menu"
  id="menu-1"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
/>
`;

exports[`Snapshots > renders correctly with empty props 1`] = `
<ul
  aria-label="Menu"
  className="menu medium"
  data-testid="menu"
  data-vibe="Menu"
  id="menu-0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
/>
`;
